--- a/tutorial_notebooks/tutorial016-Pandas-DataWrangling.ipynb
+++ b/tutorial_notebooks/tutorial016-Pandas-DataWrangling.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "This tutorial will demonstrate a way to load data from an uncommonly formatted file and change the data to a more common and usable format. \n",
     "\n",
-    "The tutorial will use .CSV files as format for the raw input data and Pandas Data Frames as example of output data.\n",
+    "The tutorial will use .CSV files as format for the raw input data and Pandas Data Frames as example of output data. The goal is to take the input data format and reorganize the data into a [Tidy Data Format](https://cran.r-project.org/web/packages/tidyr/vignettes/tidy-data.html).\n",
     "\n",
     "#### Learning outcomes\n",
     "  - Understand the importance of data preparation \n",
@@ -150,20 +150,42 @@
    "id": "41d87a33",
    "metadata": {},
    "source": [
-    "Pandas has a dedicated CSV reader. We will use the reader to load the CSV file into a data frame (`df`). Pandas will recognize the commas in the CSV (comma-separated file) and map the elements of the file into files of the data frame."
+    "Pandas has a dedicated CSV reader. We will use the reader to load the CSV file into a `DataFrame` (`df`). Pandas will recognize the commas in the CSV (comma-separated file) and map the elements of the file into files of the data frame."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "0e85ad68",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('../datasets/017DataFile.csv')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07e8153a",
+   "metadata": {},
+   "source": [
+    "Note. The above line will only work if the dataset is saved inside a folder called 'datasets', saved inside the current folder used to launch this Jupyter Notebook. Please make sure to create that folder (`mkdir`) and move (`mv`) the data file downloaded for this tutorial inside that folder. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5c750e9",
+   "metadata": {},
+   "source": [
+    "$\\color{blue}{\\text{Complete the following exercise.}}$\n",
+    "\n",
+    "  - Identify other readers `Pandas` provide. Use the cell below to report 2-3 readers (write them down) and explain the type of file they each can read. (Hint. You can use `TAB` to find all the other methods that start with 'read'.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a524f629",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -175,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "bc07ca94",
    "metadata": {},
    "outputs": [
@@ -255,7 +277,7 @@
        "4    10.367770       8.583212       18.074795          22.607487"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "b98259a0",
    "metadata": {},
    "outputs": [
@@ -354,7 +376,7 @@
        "9    11.285897      10.892394       20.325026          24.990505"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "bab2840b",
    "metadata": {},
    "outputs": [
@@ -479,13 +501,69 @@
        "max      13.412580      10.892394       21.215148          25.946384"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbe37ab5",
+   "metadata": {},
+   "source": [
+    "$\\color{blue}{\\text{Complete the following exercise.}}$\n",
+    "\n",
+    "  - Test whether the method `describe` works only on `DataFrames` or also on `Series`. To do so use the cell below to creat a Pandas `Series` (it is not important what the series contains), and test with code whether the method works also for a `Series`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d0310f8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count      8.000000\n",
+       "mean      28.875000\n",
+       "std       39.003434\n",
+       "min        1.000000\n",
+       "25%        3.500000\n",
+       "50%        5.500000\n",
+       "75%       46.750000\n",
+       "max      104.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_series = pd.Series([1,4,5,6,70,104,39,2])\n",
+    "test_series.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0de5a810",
+   "metadata": {},
+   "source": [
+    "  - Does the method `describe` take inputs? Use the cell below describe any additional inputs `describe` might take (if any). Explain what the input do/mean (if they exist)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb60f771",
+   "metadata": {},
+   "source": [
+    "The method `describe` takes in optional inputs. One of the optional inputs is called percentiles, which specifies the return values we want in a specific percentile. As such, the value must be between 0 and 1, and the default is to return the 25th, 50th, and 75th percentiles. Another optional input is called include, where we can set which values from the dataframe we want to include in the analysis. The default is to use all numeric columns in the dataframe to output the return values. Another optional input is called exclude and allows you to do the opposite of include."
    ]
   },
   {
@@ -501,7 +579,7 @@
     "\n",
     "There are multiples ways to reorganize the dataset. We will use what is called slicing. \n",
     "\n",
-    "We will address each column of the dataset. For example, below we address the first column of the data frame:"
+    "We will address each column of the dataset using the header of the colum (the label). For example, below we address the first column of the data frame:"
    ]
   },
   {
@@ -537,10 +615,51 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fa5bf754",
+   "metadata": {},
+   "source": [
+    "$\\color{blue}{\\text{Complete the following exercise.}}$\n",
+    "\n",
+    "  - Use the cell below to show the third column of the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "d5ea4e75",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    20.127063\n",
+       "1    20.068147\n",
+       "2    21.215148\n",
+       "3    20.706416\n",
+       "4    18.074795\n",
+       "5    20.367624\n",
+       "6    20.152521\n",
+       "7    19.392476\n",
+       "8    18.524341\n",
+       "9    20.325026\n",
+       "Name: Male Wild Type, dtype: float64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Male Wild Type']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b5a5e62d",
    "metadata": {},
    "source": [
-    "Our goal is to stack the data into the first column of a new data frame. We then want to add the labels into the second and third columns of the new data frame.\n",
+    "Our goal is to stack the data into the first column of a new data frame. After that, we will want to add the labels into the second and third columns of the new data frame.\n",
     "\n",
     "Let's start by creating a new data frame. We have chose to start withg an empty data frame, create a column at the time and add the columns to the data frame as the data foreach column is created.\n",
     "\n",
@@ -629,6 +748,22 @@
     "                  df['Male Wild Type'],\n",
     "                  df['Female  Wild Type']])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ce3efdc",
+   "metadata": {},
+   "source": [
+    "$\\color{blue}{\\text{Complete the following exercise.}}$\n",
+    "\n",
+    "  - Use the cell below to describe what the method `concat` does to data frames."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02e8b77f",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -806,6 +941,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f14dbbcb",
+   "metadata": {},
+   "source": [
+    "$\\color{blue}{\\text{Complete the following exercise.}}$\n",
+    "\n",
+    "  - Use the cell below to describe what the `ignore_index=True` parameter does and what is the utility of such operation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6783a767",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "96073715",
    "metadata": {},
    "source": [
@@ -829,7 +980,7 @@
    "id": "570ad375",
    "metadata": {},
    "source": [
-    "We have now populated the first column of the new data frame withthe data. Each entry comes from the original data frame loaded from the CSV. The data for the 4 different conditions are stancked so that the data for the 'Male Mutant' is first, that for the 'Female Mutant' is second, that for the 'Male Wild Type' third, and that for the 'Female  Wild Type' last."
+    "We have now populated the first column of the new data frame with the data. Each entry comes from the original data frame loaded from the CSV. The data for the 4 different conditions are stancked so that the data for the 'Male Mutant' is first, that for the 'Female Mutant' is second, that for the 'Male Wild Type' third, and that for the 'Female  Wild Type' last."
    ]
   },
   {
@@ -1085,7 +1236,7 @@
    "id": "03b1b2de",
    "metadata": {},
    "source": [
-    "After adding the first column of data we will want to add the twomissing columns defining the labels for each data point.\n",
+    "After adding the first column of data we will want to add the two missing columns defining the labels for each data point.\n",
     "\n",
     "This step will create a column for the sex and one for thr strain\n",
     "\n",
@@ -1376,7 +1527,7 @@
    "id": "b66452d3",
    "metadata": {},
    "source": [
-    "We can now add a column to our data frame and the coding for sex."
+    "We can now add a column to our data frame and the coding for sex. We can do this operation because the number of rows is the same between the two data frames."
    ]
   },
   {
@@ -1939,6 +2090,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8dbe6cab",
+   "metadata": {},
+   "source": [
+    "$\\color{blue}{\\text{Complete the following exercise.}}$\n",
+    "\n",
+    "  - Use the cell below to explain in your own words what the cell above does. How did we organize the labels, and why?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afbabec6",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "25ae03d4",
    "metadata": {},
    "source": [
@@ -2290,7 +2457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "42a48d58",
    "metadata": {},
    "outputs": [],
@@ -2303,7 +2470,7 @@
    "id": "becccd72",
    "metadata": {},
    "source": [
-    "We are done!"
+    "We are done! We have loaded a poorly organized datasets and used operations and methods available in `data frames` to reorganize the format of the data into a `Tidy Data format`!"
    ]
   },
   {
@@ -2311,8 +2478,7 @@
    "id": "39e6cf50",
    "metadata": {},
    "source": [
-    "### Make the code about flexible\n",
-    "\n",
+    "$\\color{blue}{\\text{Complete the following exercise.}}$\n",
     "\n",
     "Note, that our code above, used a lot of *hard coded* sections. This does not make the code flexible, for example if a new dataset were handed to us say with 15 data entires per condition.\n",
     "\n",
@@ -2332,12 +2498,35 @@
     "                       'Mutant','Mutant','Mutant','Mutant','Mutant',\n",
     "                       'Mutant','Mutant','Mutant','Mutant','Mutant'])\n",
     "```\n",
-    "Can you think a way to use `loops` to avoid hard coding? For example, would it be possible to replace the following block of code with a loop?\n",
     "\n",
-    "Alternatively can you think about how to use Padas' dta frame methods to populate the rows of your data frame flexibly? Padas' [`series.repeat`](https://pandas.pydata.org/docs/reference/api/pandas.Series.repeat.html) might gbe a good start if you prefer to use Padas' instaad of loops to make the code flexible.\n",
-    "\n",
-    "That would allow the variable `strain` to be adapt depending on the size of the data set handed bythe RA and frankly it would look less ugly too!"
+    "  - Can you think a way to use `loops` to avoid hard coding the above lines? For example, would it be possible to replace the block of code above using a for loop? Use the cell below to show your solution."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be93adbc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f41cd6dd",
+   "metadata": {},
+   "source": [
+    "  - Alternatively can you think ways to use Pandas' `data frame` methods to populate the rows of your data frame flexibly? This means, that the length of the rows can change depending on the number of trials colelcted. Use the cell below to show your solution.\n",
+    "  \n",
+    "Hint. Pandas' [`series.repeat`](https://pandas.pydata.org/docs/reference/api/pandas.Series.repeat.html) might be a good start, if you prefer to use Pandas' instead of loops to make the code flexible that would be totally fine!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "977837a4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2353,14 +2542,6 @@
     "  \n",
     "Keep your file created today around, we will start from that next time!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "40d52504",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
